--- a/config/database.yml
+++ b/config/database.yml
@@ -43,18 +43,18 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: hashback_test
-#   pool: 5
-#   username: hashback
-#   password:
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: hashback_db
+  pool: 5
+  username: kevinmcalear
+  password:
 
-# production:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: hashback_production
-#   pool: 5
-#   username: hashback
-#   password:
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: hashback_db
+  pool: 5
+  username: kevinmcalear
+  password:
